--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 [dependencies]
 
 [dev-dependencies]
-console = "0.15.0"
-device_query = "1.0.0"
+#console = "0.15.0"
+#device_query = "1.0.0"
 #hecs = "0.7.6"
 rust-code-analysis = "0.0.24"
